// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RewardCard /> by default matches with snapshot 1`] = `
<div
  className="sc-bdVaJa hceOql k-RewardCard"
>
  <div
    className="k-RewardCard__cardRow"
  >
    <div
      className="k-RewardCard__rowContent"
    >
      <h6
        className="sc-bxivhb hGjUEt k-RewardCard__title k-u-margin-bottom-double k-u-margin-top-none"
        style={
          Object {
            "--Title-css-color": "#222",
          }
        }
      >
        Custom title mount
      </h6>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Custom text description
      </p>
    </div>
  </div>
</div>
`;

exports[`<RewardCard /> with DiamondBadge matches with snapshot 1`] = `
<div
  className="sc-bdVaJa hceOql k-RewardCard"
>
  <div
    className="k-RewardCard__cardRow"
  >
    <div
      className="k-RewardCard__rowContent"
    >
      <div
        className="k-RewardCard__diamondBadge"
      >
        <span
          className="sc-ifAKCX hWyXQl"
          disabled={false}
        >
          <span
            className="k-IconBadge__content"
          >
            <svg
              aria-hidden={true}
              className="k-RewardCard__diamondBadge__diamondIcon k-IconBadge__svg"
              height="28"
              viewBox="0 0 19 28"
              width="19"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 14l-4 10-4-10h8zm5 0l-7 10 4-10h3zM4 14l4 10-7-10h3zm8-6l2 4H6l2-4h4zm3 0l4 4h-3l-2-4h1zM6 8l-2 4H1l4-4h1zm12.1070508-5.64951905l.75 1.2990381-3.4641016 2.00000005-.75-1.2990382 3.4641016-1.99999995zm-16.7141016 0L4.8570508 4.3504809l-.75 1.2990382L.6429492 3.64951905l.75-1.2990381zM10.5 0v4H9V0h1.5z"
                fill="#fff"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </span>
        <div
          className="k-RewardCard__diamondBadge__content"
        >
          <span
            className="sc-bwzfXH uTxCW k-u-color-font1 k-u-size-nano k-u-weight-bold"
          >
            Starred label
          </span>
          <span
            className="sc-bwzfXH uTxCW k-u-color-font1 k-u-size-nano"
          >
            Lorem ipsum
          </span>
        </div>
      </div>
      <h6
        className="sc-bxivhb hGjUEt k-RewardCard__title k-u-margin-bottom-double k-u-margin-top-none"
        style={
          Object {
            "--Title-css-color": "#222",
          }
        }
      >
        Custom title mount
      </h6>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Custom text description
      </p>
    </div>
  </div>
</div>
`;

exports[`<RewardCard /> with all props matches with snapshot 1`] = `
<div
  className="sc-bdVaJa hceOql k-RewardCard customClassName"
>
  <div
    className="k-RewardCard__cardRow"
  >
    <div
      className="k-RewardCard__rowContent"
    >
      <div
        className="k-RewardCard__starredBadge"
      >
        <span
          className="sc-ifAKCX hWyXQl"
          disabled={false}
        >
          <span
            className="k-IconBadge__content"
          >
            <svg
              aria-hidden={true}
              className="k-RewardCard__starredBadge__starredIcon k-IconBadge__svg"
              fill="#222"
              height="16"
              viewBox="0 0 18 16"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M8.999 0l1.93 5.974c.028.09.112.15.206.15l6.274-.013-5.084 3.68a.216.216 0 0 0-.079.242L14.198 16l-5.072-3.7a.216.216 0 0 0-.255 0L3.801 16l1.953-5.967a.216.216 0 0 0-.079-.243L.591 6.111l6.274.012c.094 0 .178-.06.207-.15L8.999 0z"
              />
            </svg>
          </span>
        </span>
        <div
          className="k-RewardCard__starredBadge__content"
        >
          <span
            className="sc-bwzfXH uTxCW k-u-color-font1 k-u-size-nano k-u-weight-bold"
          >
            Starred label
          </span>
          <span
            className="sc-bwzfXH uTxCW k-u-color-font1 k-u-size-nano"
          >
            Lorem ipsum
          </span>
        </div>
      </div>
      <h6
        className="sc-bxivhb hGjUEt k-RewardCard__title k-u-margin-bottom-double k-u-margin-top-none"
        style={
          Object {
            "--Title-css-color": "#222",
          }
        }
      >
        100$
      </h6>
      <p
        className="sc-bwzfXH uTxCW k-u-color-font1 k-u-weight-bold"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
      </p>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Superatis Tauri montis verticibus qui ad solis ortum sublimius attolluntur, Cilicia spatiis porrigitur late distentis dives bonis omnibus terra, eiusque lateri dextro adnexa Isauria, pari sorte uberi palmite viget et frugibus minutis, quam mediam navigabile flumen Calycadnus interscindit.
      </p>
      <ul
        className="sc-bZQynM bkXVsB k-List"
      >
        <li>
          <span
            className="sc-bwzfXH uTxCW k-u-color-font1 k-u-size-micro k-u-weight-regular k-RewardCard__infos k-RewardCard__infos--hasBottomMargin"
          >
            Contributors: 
            <span
              className="sc-bwzfXH uTxCW k-u-weight-light"
            >
              35
            </span>
          </span>
        </li>
        <li>
          <span
            className="sc-bwzfXH uTxCW k-u-color-font1 k-u-size-micro k-u-weight-regular k-RewardCard__infos k-RewardCard__infos--hasBottomMargin"
          >
            Availability: 
            <span
              className="sc-bwzfXH uTxCW k-u-weight-light"
            >
              42/1000
            </span>
          </span>
        </li>
        <li>
          <span
            className="sc-bwzfXH uTxCW k-u-color-font1 k-u-size-micro k-u-weight-regular k-RewardCard__infos"
          >
            Delivery: 
            <span
              className="sc-bwzfXH uTxCW k-u-weight-light"
            >
              January 2019
            </span>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="k-RewardCard__rowSide k-RewardCard__rowSide--hasMargins"
    >
      <div
        className="k-RewardCard__figureWrapper"
      >
        <img
          alt="My reward"
          className="k-RewardCard__image"
          src="http://via.placeholder.com/200x240/caf4fe/caf4fe"
        />
      </div>
    </div>
  </div>
  <div
    className="k-RewardCard__checkedIconLine"
  >
    <span
      className="sc-ifAKCX kYpVhn k-RewardCard__iconBadge"
      disabled={false}
    >
      <span
        className="k-IconBadge__content"
      >
        <svg
          className="k-IconBadge__svg"
          fill="#fff"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="k-RewardCard__checkedSection"
  >
    <p
      className="sc-bwzfXH uTxCW k-u-color-font1 k-u-size-tiny"
    >
      You contributed to this project.
    </p>
    <a
      className="sc-bwzfXH uTxCW k-u-color-primary1 k-u-decoration-none k-u-size-tiny k-u-weight-regular"
      href="#"
    >
      Manage my contribution
    </a>
  </div>
</div>
`;

exports[`<RewardCard /> with video matches with snapshot 1`] = `
<div
  className="sc-bdVaJa hceOql k-RewardCard"
>
  <div
    className="k-RewardCard__cardRow"
  >
    <div
      className="k-RewardCard__rowContent"
    >
      <h6
        className="sc-bxivhb hGjUEt k-RewardCard__title k-u-margin-bottom-double k-u-margin-top-none"
        style={
          Object {
            "--Title-css-color": "#222",
          }
        }
      >
        Custom title mount
      </h6>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Custom text description
      </p>
    </div>
    <div
      className="k-RewardCard__rowSide k-RewardCard__rowSide--hasMargins"
    >
      <div
        className="k-RewardCard__figureWrapper"
      >
        <video
          autoPlay={true}
          className="sc-htpNat bkaCVb k-RewardCard__video"
          loop={false}
          muted={true}
          playsInline={true}
          poster={null}
        >
          <source
            src="#video.mp4"
            type="video/mp4"
          />
          <source
            src="#video.webm"
            type="video/webm"
          />
        </video>
      </div>
    </div>
  </div>
</div>
`;
